# wrela_rust

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md
.config/: insta.yaml  nextest.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_regression.yml  config.yml  decision_adr.yml  lookdev_combat_tuning.yml  roadmap_task.yml
.github/workflows/: ci.yml
apps/wr_agentd/: Cargo.toml
apps/wr_agentd/src/: lib.rs  main.rs
apps/wr_agentd/tests/: daemon_api.rs
apps/wr_client/: Cargo.toml
apps/wr_headless/: Cargo.toml
apps/wr_headless/src/: lib.rs  main.rs
apps/wr_headless/tests/: scenario_runner.rs
baselines/: README.md
baselines/reports/: noop_test_result_bundle_v1.json
crates/wr_actor_player/: Cargo.toml
crates/wr_actor_wraith/: Cargo.toml
crates/wr_ai/: Cargo.toml
crates/wr_combat/: Cargo.toml
crates/wr_core/: Cargo.toml
crates/wr_core/src/: config_packs.rs  lib.rs  telemetry.rs  tweaks.rs
crates/wr_ecs/: Cargo.toml
crates/wr_ecs/src/: lib.rs
crates/wr_game/: Cargo.toml
crates/wr_game/src/: lib.rs
crates/wr_game/tests/: render_extraction.rs  scaffold_entrypoints.rs
crates/wr_math/: Cargo.toml
crates/wr_physics/: Cargo.toml
crates/wr_physics/src/: lib.rs  terrain_collision.rs
crates/wr_physics/src/snapshots/: wr_physics__terrain_collision__tests__terrain_collider_report.snap
crates/wr_platform/: Cargo.toml
crates/wr_platform/src/: lib.rs
crates/wr_procgeo/: Cargo.toml
crates/wr_procgeo/benches/: redwood_tree_meshes.rs
crates/wr_procgeo/src/: foliage.rs  lib.rs  redwood.rs  terrain.rs
crates/wr_procgeo/src/snapshots/: wr_procgeo__terrain__tests__terrain_mesh_report.snap
crates/wr_render_api/: Cargo.toml
crates/wr_render_atmo/: Cargo.toml
crates/wr_render_post/: Cargo.toml
crates/wr_render_scene/: Cargo.toml
crates/wr_render_scene/src/: foliage_debug.rs  lib.rs  redwood_debug.rs  terrain_debug.rs
crates/wr_render_wgpu/: Cargo.toml
crates/wr_render_wgpu/src/: clear_pass.wgsl  debug_triangle.wgsl  foliage_card.wgsl  lib.rs
crates/wr_telemetry/: Cargo.toml
crates/wr_telemetry/benches/: artifact_component.rs
crates/wr_telemetry/src/: lib.rs  metrics.rs  trace_capture.rs  verification.rs
crates/wr_telemetry/src/snapshots/: wr_telemetry__verification__tests__verification_step_records.snap
crates/wr_tools_harness/: Cargo.toml
crates/wr_tools_harness/src/: artifact_paths.rs  contract.rs  lib.rs
crates/wr_tools_ui/: Cargo.toml
crates/wr_tools_ui/src/: lib.rs
crates/wr_vfx/: Cargo.toml
crates/wr_world_gen/: Cargo.toml
crates/wr_world_gen/benches/: ecological_placements.rs  redwood_tree_graphs.rs  terrain_scalar_fields.rs
crates/wr_world_gen/src/: ecology.rs  lib.rs  redwood.rs
crates/wr_world_gen/src/snapshots/: wr_world_gen__tests__duel_focus_debug_dump.snap  wr_world_gen__tests__hero_forest_summary.snap
crates/wr_world_seed/: Cargo.toml
docs/: perf-budget.md
docs/adr/: ADR-000-scope-lock.md  README.md
docs/architecture/: README.md  agent_daemon.md  ecological_placement.md  ecs_runtime.md  harness_contract.md  headless_scenario_runner.md  platform_shell.md  redwood_foliage_clusters.md  redwood_tree_graphs.md  redwood_tree_meshes.md  render_backend.md  seed_graph.md  terrain_mesh_collision.md  terrain_scalar_fields.md  verification_stack.md  workspace_scaffold.md
docs/process/: CODE_REVIEW_GUIDELINES.md  TRIAGE_GUIDELINES.md  process_contract.json  validate_process_contract.py
docs/tuning/: README.md
generated-cache/: README.md
reports/: README.md
reports/benchmarks/: pr-014-ecological_placements_bench.txt
roadmap/: wrela_v0_pr_backlog.json  wrela_v0_rust_project_plan.md
roadmap/completed_tasks/: PR-001-agent-harness-contract-and-artifact-schema.md  PR-002-test-runner-reproducibility-and-verification-stack.md  PR-003-headless-scenario-runner-skeleton.md  PR-004-local-agent-daemon-and-command-surface.md  PR-006-platform-shell-input-abstraction-and-fixed-step-app-loop.md  PR-007-ecs-world-schedules-and-plugin-composition-model.md  PR-008-deterministic-seed-graph-rng-and-config-packs.md  PR-009-telemetry-metrics-and-profiler-plumbing.md  PR-011-render-graph-shader-module-pipeline-and-scene-extraction-api.md  PR-012-terrain-scalar-fields-height-slope-moisture-fog-canopy-opportunity.md  PR-013-terrain-mesh-generation-chunking-and-static-collision-bake.md  PR-014-ecological-placement-solver-for-trunks-understory-and-deadfall-anchors.md  PR-015-redwood-tree-graph-generator-using-space-colonization-growth.md  PR-016-procedural-bark-trunk-and-branch-mesh-generation-with-lods.md  PR-017-procedural-foliage-clusters-canopy-cards-and-material-functions.md
roadmap/pending_tasks/: PR-000-workspace-scaffold-conventions-and-empty-crate-topology.md  PR-002-test-runner-reproducibility-and-verification-stack.md  PR-003-headless-scenario-runner-skeleton.md  PR-004-local-agent-daemon-and-command-surface.md  PR-005-live-tweak-registry-and-in-engine-developer-ui-shell.md  PR-006-platform-shell-input-abstraction-and-fixed-step-app-loop.md  PR-007-ecs-world-schedules-and-plugin-composition-model.md  PR-008-deterministic-seed-graph-rng-and-config-packs.md  PR-009-telemetry-metrics-and-profiler-plumbing.md  PR-010-wgpu-backend-skeleton-offscreen-render-path-and-frame-capture.md  PR-012-terrain-scalar-fields-height-slope-moisture-fog-canopy-opportunity.md  PR-013-terrain-mesh-generation-chunking-and-static-collision-bake.md  PR-014-ecological-placement-solver-for-trunks-understory-and-deadfall-anchors.md  PR-015-redwood-tree-graph-generator-using-space-colonization-growth.md  PR-016-procedural-bark-trunk-and-branch-mesh-generation-with-lods.md  PR-018-ground-cover-deadfall-roots-and-set-dressing-generators.md  PR-019-wind-fields-and-vegetation-secondary-motion.md  PR-020-hillaire-atmosphere-luts-and-sky-rendering.md  PR-024-movement-and-kinematic-physics-integration.md  (+16 more)
scenarios/: README.md
scripts/: run_claude_review.py
tweak_packs/: README.md
xtask/: Cargo.toml
xtask/src/: bootstrap_commands.rs  lib.rs  main.rs  util.rs  verify.rs
xtask/tests/: capture_command.rs
(+16 files in other folders)
