[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = []
stub = []

[lib]
path = "src/lib.rs"

[dependencies]
wr_agentd.workspace = true
wr_core.workspace = true
wr_headless.workspace = true
wr_render_api.workspace = true
wr_render_wgpu.workspace = true
wr_telemetry.workspace = true
wr_tools_harness.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
image.workspace = true
tempfile.workspace = true
