[package]
name = "wr_agentd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = []
stub = []

[lib]
path = "src/lib.rs"

[dependencies]
axum.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
wr_core.workspace = true
wr_game.workspace = true
wr_tools_harness.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
tower.workspace = true
