[package]
name = "wr_headless"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = []
stub = []

[lib]
path = "src/lib.rs"

[dependencies]
wr_core.workspace = true
wr_game.workspace = true
wr_render_api.workspace = true
wr_render_wgpu.workspace = true
wr_telemetry.workspace = true
wr_tools_harness.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile.workspace = true
