[package]
name = "wr_core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = []
stub = []

[dependencies]
ron.workspace = true
serde.workspace = true

[dev-dependencies]
insta.workspace = true
