[package]
name = "wr_ecs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = []
stub = []

[dependencies]
bevy_ecs.workspace = true
wr_core.workspace = true
wr_world_seed.workspace = true
