[package]
name = "wr_physics"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = []
stub = []

[dependencies]
wr_core.workspace = true
wr_math.workspace = true
wr_procgeo.workspace = true
serde.workspace = true

[dev-dependencies]
insta.workspace = true
wr_world_gen.workspace = true
wr_world_seed.workspace = true
