[package]
name = "wr_platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = []
stub = []

[dependencies]
wr_core.workspace = true
winit.workspace = true
wr_render_api.workspace = true
wr_render_wgpu.workspace = true
