[package]
name = "wr_procgeo"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = []
stub = []

[dependencies]
wr_core.workspace = true
wr_math.workspace = true
wr_world_gen.workspace = true
serde.workspace = true

[dev-dependencies]
criterion.workspace = true
insta.workspace = true
proptest.workspace = true
serde_json.workspace = true
wr_world_seed.workspace = true

[[bench]]
name = "redwood_tree_meshes"
harness = false
