[package]
name = "wr_render_scene"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = []
stub = []

[dependencies]
wr_core.workspace = true
wr_physics.workspace = true
wr_procgeo.workspace = true
wr_render_api.workspace = true
wr_world_gen.workspace = true
wr_world_seed.workspace = true

[dev-dependencies]
tempfile.workspace = true
wr_render_wgpu.workspace = true
