[package]
name = "wr_render_wgpu"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = []
stub = []

[dependencies]
wr_core.workspace = true
image.workspace = true
pollster.workspace = true
wgpu.workspace = true
winit.workspace = true
wr_render_api.workspace = true

[dev-dependencies]
tempfile.workspace = true
