[package]
name = "wr_telemetry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = []
stub = []

[dependencies]
wr_core.workspace = true
schemars.workspace = true
serde.workspace = true
