[package]
name = "wr_telemetry"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = []
stub = []
tracy = ["dep:tracy-client"]

[dependencies]
wr_core.workspace = true
schemars.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracy-client = { workspace = true, optional = true }

[dev-dependencies]
criterion.workspace = true
insta.workspace = true
proptest.workspace = true
tempfile.workspace = true

[[bench]]
name = "artifact_component"
harness = false
