[package]
name = "wr_tools_harness"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = []
stub = []

[dependencies]
wr_core.workspace = true
wr_telemetry.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
jsonschema.workspace = true
proptest.workspace = true
