[package]
name = "wr_tools_ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = []
stub = []

[dependencies]
egui.workspace = true
wr_core.workspace = true

[dev-dependencies]
tempfile.workspace = true
