[package]
name = "wr_world_gen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[lints]
workspace = true

[features]
default = []
stub = []

[dependencies]
wr_core.workspace = true
wr_math.workspace = true
wr_world_seed.workspace = true
serde.workspace = true

[dev-dependencies]
criterion.workspace = true
insta.workspace = true
proptest.workspace = true

[[bench]]
name = "terrain_scalar_fields"
harness = false
